# AeroChico

./: README.md  aero_pi4.py
aero_unificado/: CMakeLists.txt  aero_unificado.c
aero_unificado/lib/: GPS_neo_6.c  GPS_neo_6.h  bme680_custom.c  bme680_custom.h  mpu6500.c  mpu6500.h
codigo_unificado_pico_w/: CMakeLists.txt  codigo_unificado_pico_w.c
codigo_unificado_pico_w/lib/: GPS_neo_6.c  GPS_neo_6.h  bme680_custom.c  bme680_custom.h  mpu6500.c
